feat: add unverified content by label endpoint
